# rheon

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  build.sh  initial_setup.sh  mkdocs.yml  pyproject.toml  results.xml
.github/workflows/: ci.yml  deploy-docs.yml
assets/: rheon_regr_app.before_fix.icns  rheon_regr_app.icns
docs/: electron_app.md  getting_started.md  github_pages.md  index.md  introduction.md  known_limitations.md  testing.md
electron/: .gitignore  README.md  build.sh  clean.sh  main.js  package-lock.json  package.json  preload.js
electron/renderer/: index.html  vite.config.ts
electron/renderer/src/: App.tsx  main.tsx  styles.css  types.ts
electron/renderer/src/api/: client.ts
electron/renderer/src/components/: ArchiveDeck.test.tsx  ArchiveDeck.tsx  ArchiveJobDetailsPane.tsx  ArchiveJobsPane.tsx  ArchiveRunsPane.tsx  BloomCanvasLens.tsx  BottomDrawer.test.tsx  BottomDrawer.tsx  CellAtlasOverlay.tsx  FailureClusterPanel.tsx  FaultWeaveOverlay.tsx  JobInspector.tsx  LiveWorkbench.tsx  NumberStepperInput.tsx  OperatorTableLens.tsx  ProgressionMapOverlay.tsx  QuickRunBar.test.tsx  QuickRunBar.tsx  SessionRail.tsx
electron/renderer/src/test/: setup.ts
examples/: regression.example.yaml  regression.testing.yaml
rheon_core/: Makefile  README.md  alu.sv  commit.sv  decode.sv  execute.sv  fetch.sv  gpr_file.sv  rheon_core.sv  rheon_pkg.sv
rheon_core/spec/: rheon_pkg_spec.py
scripts/: asm2elf.sh  bump_version.py  rheon_clean  rheon_cli_common.py  rheon_gen  rheon_regr  rheon_regr_app  rheon_regr_app.py  rheon_regr_app_mac.sh  rheon_run  rheon_sim  riscv_bare.ld  run_test.sh  tidy_docs_links.py
scripts/rheon_regr_app_assets/: index.html
scripts/rheon_regr_app_assets/assets/: index-BClrg_cv.js  index-BKE659cQ.css  index-BN9asBam.css  index-BcgdkQs0.js  index-Bi8LAizu.js  index-Bm48qXD4.css  index-CB3-wv6P.css  index-CXb1BNks.js  index-CbLUyViL.js  index-D3o6Bea3.css  index-DaimjYcy.js  index-DgrcTeUh.js  index-MVcElAp2.js  index-WlAFeCg_.js
tb/: README.md  __init__.py  disasm.py  drivers.py  io.py  memory.py  scoreboard.py  testbench.py  transactions.py  verbosity.py
tb/coverage/: __init__.py  i_extension.py
tb/monitors/: __init__.py  memory.py  pipeline.py
testcases/: __init__.py  test_elf.py
tests/: __init__.py  test_coverage_i_ext.py  test_rheon_regr_app.py  test_rheon_regr_app_launcher.py  test_rheon_regress.py  test_rheon_scripts_cli.py
tests/cocotb/: __init__.py  test_elf.py
