[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rheon"
version = "0.1.0"
description = "Vibe-coded RISC-V core and testbench"
authors = [
    {name = "Stuart Alldred", email = "stuartalldred@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython==3.1.41",
    "pydantic>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.8.0",
    "pytest>=8.0.1",
    "pytest-cov>=4.1.0",
]

[project.scripts]
rheon = "rheon.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["rheon"]
