[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rheon"
version = "0.1.0"
description = "Vibe-coded RISC-V core and testbench"
authors = [
    {name = "Stuart Alldred", email = "stuartalldred@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cocotb>=2.0",
    "forastero @ git+ssh://git@github.com/Intuity/forastero.git",
    "gitpython==3.1.41",
    "packtype",
    "pydantic>=2.8.2",
    "pyelftools>=0.31",
    "lome @ git+ssh://git@github.com/Alldred/lome.git",
    "tibbar @ git+ssh://git@github.com/Alldred/tibbar.git",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.8.0",
    "pytest>=8.0.1",
    "pytest-cov>=4.1.0",
]

[project.scripts]
rheon = "rheon.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["rheon"]

[tool.hatch.metadata]
allow-direct-references = true
